Updated footer spacing and fixed burger menu on other pages

--- a/styles.css
+++ b/styles.css
@@ -144,7 +144,7 @@ h1 {
 
 .contact {padding: 32px; font-size: 28px;}
 
-form {padding-left: 25%;}
+form {width: 600px; margin-left: auto; margin-right: auto;}
 label {font-size: 1.2rem;}
 fieldset {display: block; margin: 0; padding-top: 10px; padding-bottom: 10px; border: none;}
 textarea {background-color: #E7F3EF; width: 500px; height: 100px;}
